# ChangeLog for media-video/vdr
# Copyright 2003 Martin Hierling; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.23 2003/07/01 17:38:06 mad Exp $

*vdr-1.2.1 (26 Jun 2003)
  30 Jun 2003; M.Hierling <mad@cc.fh-lippe.de>
  added gentoo patch, build a new Elchi patch (nothing new, only to
  get rid of the hunks and rej), fixed wrong plugin filename

  26 Jun 2003; H.Ryll <henning.ryll@web.de>
  new version

*vdr-1.2.0 (04 Jun 2003)
  01 Jul 2003; M.Hierling <mad@cc.fh-lippe.de>
  fixed download location of akool patch

  20 Jun 2003; M.Hierling <mad@cc.fh-lippe.de>
  added AD3overDVB patch, contributed by trtr-z

  04 Jun 2003; M.Hierling <mad@cc.fh-lippe.de>
  jumped to version 1.2.0, vdr now runs with uid vdr and gid video,
  pluginnames changed, some default dirs changed, added default
  plugins, moved plugindir to /usr/lib/vdr 
  added VDR_OPTS (vfat, rcu, akool) to steer the installation of
  patches and vdr addons
  added vdrshutdown.sh sample script

*vdr-1.1.31 (12 May 2003)
  12 May 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.31.ebuild
  new version, version needs cvs head driver from 2002-05-10
  and is therefore marked unstable, nothing new

  15 May 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.31.ebuild
  fixed compile problem (menu.c), see vdr ml

*vdr-1.1.30 (06 May 2003)
  06 May 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.30.ebuild
  new version, version needs cvs head driver from 2002-04-27
  and is therefore marked unstable, nothing new

*vdr-1.1.29 (27 Apr 2003)
  27 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.29.ebuild
  new version, version needs cvs head driver from 2002-04-27
  and is therefore marked unstable, nothing new

*vdr-1.1.28 (21 Apr 2003)
  22 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.28.ebuild
  new version, version needs cvs head driver from 2002-04-21
  and is therefore marked unstable, nothing new
